--- a/Employee-Details/pom.xml
+++ b/Employee-Details/pom.xml
@@ -3,39 +3,31 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.xworkz</groupId>
-	<artifactId>sdi</artifactId>
+	<artifactId>Employee-Details</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
-
-
 	<dependencies>
 
-
-		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 			<version>5.3.20</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>5.3.20</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.24</version>
 			<scope>provided</scope>
 		</dependency>
-		
 
-		
 	</dependencies>
 	<packaging>war</packaging>
-
-
 	<build>
 		<plugins>
 			<plugin>
