--- a/Employee-Details/src/main/webapp/WEB-INF/web.xml
+++ b/Employee-Details/src/main/webapp/WEB-INF/web.xml
@@ -5,37 +5,29 @@
 	id="WebApp_ID" version="3.1">
 	<display-name>Employee-Details</display-name>
 	<welcome-file-list>
-
-		<welcome-file>EmployeeFile.html</welcome-file>
+		<welcome-file>EmployeeLogin.html</welcome-file>
 	</welcome-file-list>
 
-
 	<servlet>
-
-
 		<servlet-name>dispatcherServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-
-
 
 		<init-param>
 
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/lib/Spring-Context.xml</param-value>
+			<param-value>/WEB-INF/Spring-Context.xml</param-value>
 
 		</init-param>
 
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-	
-	
+
 	<servlet-mapping>
 
 		<servlet-name>dispatcherServlet</servlet-name>
 		<url-pattern>*.employee</url-pattern>
 
 	</servlet-mapping>
-
 
 
 </web-app>
